Fixes #1210, ecobenefit weird alignment

--- a/opentreemap/treemap/css/sass/partials/pages/_sidebar.scss
+++ b/opentreemap/treemap/css/sass/partials/pages/_sidebar.scss
@@ -166,7 +166,7 @@
             float: left;
             margin: 2px 0 0;
             line-height: 2.1rem;
-            width: 275px;
+            width: 280px;
             color: $primary-color;
         }
         .benefit-content {
